# WeFish

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  message.h  wefish.db
client/: CMakeLists.txt  client.cc  client.hpp
client/backup/: client.cc  client.h
common/: jsonrpcpp.hpp
crypto/: base64.cc  base64.hpp
fclient/: CMakeLists.txt  fclient.cc  fclient.hpp
fserver/: CMakeLists.txt  fserver.cc  fserver.hpp
sbase/: sbase.h
server/: CMakeLists.txt  server.cc  server.h  server.hpp
